<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question">

    <EditText
        android:id="@+id/editTextMultiLineQuestionInput"
        android:layout_width="314dp"
        android:layout_height="283dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/buttonSubmitQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="508dp" />

    <ImageButton
        android:id="@+id/imageButtonCancelUserQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/textViewQuestionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="178dp" />

    <TextView
        android:id="@+id/textViewNutIdLabelQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="90dp" />

    <EditText
        android:id="@+id/editTextNumberNutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="115dp" />

</androidx.constraintlayout.widget.ConstraintLayout>