<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionistRegister">

    <Button
        android:id="@+id/buttonRegisterNut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="35dp"
        android:text="@string/register"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewErrorLabelNutReg"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordNutReg"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordNutReg" />

    <ImageButton
        android:id="@+id/imageButtonCancelNutReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="356dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/editTextPasswordNutReg"
        android:layout_width="270dp"
        android:layout_height="76dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterNut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordLabel5" />

    <EditText
        android:id="@+id/editTextUserNameNutReg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textViewPasswordLabel5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserNameLabel4" />

    <TextView
        android:id="@+id/textViewUserNameLabel4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="169dp"
        android:text="@string/user_label"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserNameNutReg"
        app:layout_constraintStart_toStartOf="@+id/editTextUserNameNutReg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPasswordLabel5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordNutReg"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordNutReg"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserNameNutReg" />

    <TextView
        android:id="@+id/textViewErrorLabelNutReg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="51dp"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewErrorMessageNutReg"
        app:layout_constraintStart_toStartOf="@+id/textViewErrorMessageNutReg"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterNut" />

    <TextView
        android:id="@+id/textViewErrorMessageNutReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="187dp"
        android:layout_marginBottom="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorLabelNutReg" />
</androidx.constraintlayout.widget.ConstraintLayout>