<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionistSignIn">

    <ImageButton
        android:id="@+id/imageButtonCancelNutSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="356dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <Button
        android:id="@+id/buttonSignInNut2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="187dp"
        android:text="@string/sign_in"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordNutSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordNutSignIn" />

    <EditText
        android:id="@+id/editTextUserNameNutSignIn"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginTop="234dp"
        android:layout_marginBottom="273dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textViewErrorLabelNutSignIn"
        app:layout_constraintStart_toStartOf="@+id/textViewNutritionistLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordNutSignIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignInNut2"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserNameNutSignIn"
        app:layout_constraintStart_toStartOf="@+id/textViewPasswordLabel4"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordLabel4" />

    <TextView
        android:id="@+id/textViewPasswordLabel4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/password_label"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordNutSignIn"
        app:layout_constraintStart_toStartOf="@+id/editTextUserNameNutSignIn"
        app:layout_constraintTop_toBottomOf="@+id/textViewNutritionistLabel" />

    <TextView
        android:id="@+id/textViewNutritionistLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="216dp"
        android:layout_marginBottom="88dp"
        android:text="@string/user_label"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewPasswordLabel4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewErrorLabelNutSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewErrorMessageNutSignIn"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserNameNutSignIn"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordNutSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserNameNutSignIn" />

    <TextView
        android:id="@+id/textViewErrorMessageNutSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="89dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewErrorLabelNutSignIn"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrorLabelNutSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>